<?xml version="1.0"?>
<package format="2">
  <name>exercise_2_1</name>
  <version>1.0.0</version>
  <description>Exercise_2_1 for the Master in Robotics from UVIC 2019-20</description>

  <maintainer email="ramon.viedma@gmail.com">Ramon Viedma</maintainer>
  <license>BSD</license>
  <author email="ramon.viedma@gmail.com">Ramon Viedma</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>usb_cam</build_depend>
  <build_export_depend>usb_cam</build_export_depend>
  <exec_depend>usb_cam</exec_depend>

</package>
